--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<h1>qweqwe</h1>
+	<h1>Header</h1>
 </body>
-<script src="js/index.js"></script>
+<script src="js/main.js"></script>
 </html>
